--- a/sass/helpers/_inc/_typography.sass
+++ b/sass/helpers/_inc/_typography.sass
@@ -16,3 +16,15 @@
 
 .text-capitalize
 	text-transform: capitalize
+
+.line-height-double
+	line-height: 1.3
+
+.text-small
+	+responsive-text-size(small)
+.text-medium
+	+responsive-text-size(medium)
+.text-large
+	+responsive-text-size(large)
+.text-xlarge
+	+responsive-text-size(x-large)
