--- a/sass/components/_inc/_faq.sass
+++ b/sass/components/_inc/_faq.sass
@@ -1,10 +1,10 @@
 .faq
-	margin-bottom: sizes(triple)
+
 	dt
-		font-size: rem(16px)
+		font-size: rem(20px)
 		padding: sizes(base) 0
 		margin: 0
-		font-weight: 500
+		font-weight: 600
 		border-bottom: 1px solid $color-keyline-light
 		&:hover
 			cursor: pointer
@@ -13,7 +13,8 @@
 			color: colors(brand-primary)
 
 	dd
+		padding: sizes(double) 0
 		display: none
-		font-size: rem(14px)
-		padding: sizes(single) 0
+		font-size: rem(16px)
+		line-height: 1.4
 
