--- a/sass/components/_inc/_grid.sass
+++ b/sass/components/_inc/_grid.sass
@@ -5,6 +5,16 @@ $size-grid-gutter: 															sizes(base)
 // Idea?
 $screen-padding: null 
 
+// $susy: (
+//   columns: 12,
+//   gutter-position: inside,
+//   math: fluid,
+//   output: float,
+//   flow: rtl,
+// );
+
+// margin-right: gutter();
+
 =grid($value)
 	float: left
 	width: (100% / $column-numbers) * $value
