--- a/sass/components/_inc/_navigation.sass
+++ b/sass/components/_inc/_navigation.sass
@@ -61,7 +61,7 @@ section
 	height: $size-nav-height
 	display: flex
 	width: 100%
-	z-index: 9999
+	z-index: layer(modal)
 	
 	&.is-fixed
 		+box-shadow(0 1px 3px $drop-shadow)
