--- a/sass/components/_inc/_typography.sass
+++ b/sass/components/_inc/_typography.sass
@@ -6,13 +6,10 @@ h1, h2, h3, h4, h5, h6
 		text-transform: uppercase
 		letter-spacing: 0.1em
 
-// Generate text-sizes from array
-
 h1, h2
 	margin-bottom: sizes(base)
-// Why margin here?
+	
 h3, h4, h5, h6
-	// margin: $size-triple-unit 0 $size-double-unit 0
 	margin-bottom: sizes(half)
 
 
@@ -25,16 +22,15 @@ h3, h4, h5, h6
 .text-muted
 	color: colors(greyscale, mid)
 
-.link-reset 
-	color: inherit
-
-// a
-// 	color: colors(greyscale)
 
 a
 	color: greyscale(dark)
+	
 	&:hover
 		color: colors(brand-primary)
+
+	&.link-reset 
+		color: inherit
 
 p
 	+responsive-text-size(base)
@@ -111,26 +107,6 @@ h5, .h5
 
 h6, .h6
 	@include responsive-text-size(x-small)
-
-// Used for headings
-.divider
-	border-bottom: 1px solid $color-keyline-light
-	text-align: center
-	margin-bottom: sizes(double)
-	h2
-		position: relative
-		bottom: -15px
-		background: white
-		display: inline-block
-		padding: 0 15px
-		font-size: 20px
-
-
-
-
-
-
-
 
 .heading
 	text-transform: uppercase
